<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Time Tracker</string>
    <string name="hello_world">Hello There! Enter your Name: </string>
    <string name="user_name">Name</string>
    <string name="action_settings">Settings</string>
    <string name="editMsg_toolTip">Enter Text</string>
    <string name="saveBtnTitle">Save</string>
    <string name="action_title">Action</string>
    <string name="new_task_title">Create Task</string>
    <string name="create_task_label">Save</string>
    <string name="cancel_task_label">Cancel</string>
    <string name="title_activity_display_confirmation">DisplayConfirmation</string>
    <string name="showStartTimeBtnText">Edit Time</string>
    <string name="showStartDateBtnText">Edit Date</string>
    <string name="showEndDateBtnText">Add End Date</string>
    <string name="frequency_label_repeat">Repeat</string>
    <string name="frequency_label_once">Once</string>
    <string name="task_title_hint">Enter Task Title Here</string>
    <string name="sun_label">Sun</string>
    <string name="mon_label">Mon</string>
    <string name="tue_label">Tue</string>
    <string name="wed_label">Wed</string>
    <string name="thu_label">Thu</string>
    <string name="fri_label">Fri</string>
    <string name="sat_label">Sat</string>
    
    <string name="notification_title">To Do Notification</string>
    <string name="start_activity_button_label">Start</string>
    <string name="discard_activity_button_label">Discard</string>
    
    

    <string-array name="mnthArray">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="title_activity_create_task">Create New Task</string>

</resources>
