<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vjburra.todoapp.CreateTask" >

    <!-- <TextView -->
    <!-- android:id="@+id/textView1" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:text="@string/hello_world" /> -->

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
	        android:scaleX="0.70"
	        android:scaleY="0.70" >

        <EditText
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:hint="@string/task_title_hint"
            android:layout_marginBottom="0dp">
            
        </EditText>
        
<!--         <CheckBox  -->
<!--             android:id="@+id/frequency1" -->
<!--             android:layout_width="fill_parent" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:text="@string/frequency_label"  -->
            
<!--             /> -->
        
        
	<RadioGroup 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
    	<RadioButton
	        android:id="@+id/freq_once"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/frequency_label_once" 
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="0dp"/>
    	
		<RadioButton
		    android:id="@+id/freq_repeat"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/frequency_label_repeat" />
		</RadioGroup>
<!-- 	<LinearLayout  -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	    	android:orientation="horizontal"> -->
			<TableLayout
			    android:id="@+id/daySelection"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
			    <TableRow
			        android:id="@+id/tableRow2"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" >
			        <TextView 
				         android:layout_width="wrap_content"
			    		 android:layout_height="wrap_content"
			        	 android:text="@string/sun_label" 
		            	/>
				    <TextView 
			            android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/mon_label" 
			            />
					<TextView 
			            android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/tue_label" 
			            />
					<TextView 
			            android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/wed_label" 
			            />
					<TextView 
			            android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/thu_label" 
			            />
					<TextView 
			            android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/fri_label" 
			            />
					<TextView 
			            android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/sat_label" 
			            />
				    </TableRow>
				    <TableRow
				        android:id="@+id/tableRow3"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content" >
						<CheckBox 
				            android:id="@+id/sun"
				            android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
				            />
						<CheckBox 
				            android:id="@+id/mon"
				            android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
				            />
						<CheckBox 
				            android:id="@+id/tue"
				            android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
				            />
						<CheckBox 
				            android:id="@+id/wed"
				            android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
				            />
						<CheckBox 
				            android:id="@+id/thu"
				            android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
				            />
						<CheckBox 
				            android:id="@+id/fri"
				            android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
				            />
						<CheckBox 
				            android:id="@+id/sat"
				            android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
				            />
				    </TableRow>
				</TableLayout>
				
				<TextView 
			        android:layout_width="fill_parent"
	        		android:layout_height="wrap_content"
			        android:id="@+id/startDate"
			        android:clickable="true"
			        android:onClick="showDatePickerDialog"/>
				
			 	<TextView 
			        android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
			        android:id="@+id/startTime"
			        android:clickable="true"
			        android:onClick="showTimePickerDialog"/>
			 	
			 	

<!-- 	    <LinearLayout  -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:orientation="horizontal"> -->
	        
<!-- 		        <DatePicker -->
<!-- 			        android:id="@+id/startDate" -->
<!-- 			        android:layout_width="wrap_content" -->
<!-- 			        android:layout_height="wrap_content" -->
<!-- 			        android:calendarViewShown="false" -->
<!-- 			        android:clipChildren="true" -->
<!-- 			        android:clipToPadding="true" -->
<!-- 		            android:layout_marginTop="-20dp" -->
<!-- 		            android:layout_marginBottom="-20dp" -->
<!-- 		            android:padding="-20dp" -->
<!-- 		            android:scaleX="0.7" -->
<!-- 		            android:scaleY="0.7"/> -->
		
<!-- 		    	<TimePicker -->
<!-- 			        android:id="@+id/startTime" -->
<!-- 			        android:layout_width="wrap_content" -->
<!-- 			        android:layout_height="wrap_content"  -->
<!-- 		            android:layout_marginTop="-20dp" -->
<!-- 		            android:layout_marginBottom="-20dp" -->
<!-- 		            android:scaleX="0.8" -->
<!-- 	            	android:scaleY="0.8"/> -->
<!-- 	    </LinearLayout> -->
<!-- <Spinner -->
<!-- 			        android:id="@+id/startDateSpinner" -->
<!-- 			        android:layout_width="match_parent" -->
<!-- 			        android:layout_height="wrap_content" /> -->
<!-- 		<LinearLayout -->
<!-- 		    android:layout_width="wrap_content" -->
<!-- 		    android:layout_height="wrap_content" -->
<!-- 		    android:orientation="horizontal" > -->
<!-- 			    <TextView  -->
<!-- 			        android:layout_width="fill_parent" -->
<!-- 	        		android:layout_height="wrap_content" -->
<!-- 			        android:id="@+id/startDate" -->
<!-- 			        android:clickable="true" -->
<!-- 			        android:onClick="showDatePickerDialog"/> -->
			    
<!-- 			    <Button -->
<!-- 			        android:id="@+id/editStartDate" -->
<!-- 			        android:layout_width="wrap_content" -->
<!-- 			        android:layout_height="wrap_content" -->
<!-- 			        android:text="@string/showStartDateBtnText"  -->
<!-- 			        android:onClick="showDatePickerDialog"/> -->
<!-- 		 </LinearLayout>    -->

<!-- 	    <LinearLayout -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:orientation="horizontal" > -->

<!-- 			    <TextView  -->
<!-- 			        android:layout_width="wrap_content" -->
<!-- 	        		android:layout_height="wrap_content" -->
<!-- 			        android:id="@+id/startTime" -->
<!-- 			        android:clickable="true" -->
<!-- 			        android:onClick="showTimePickerDialog"/> -->
<!-- 			    <Button -->
<!-- 			        android:id="@+id/showStartTime" -->
<!-- 			        android:layout_width="wrap_content" -->
<!-- 			        android:layout_height="wrap_content" -->
<!-- 			        android:text="@string/showStartTimeBtnText"  -->
<!-- 			        android:onClick="showTimePickerDialog"/> -->
<!-- 		</LinearLayout> -->
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >

			    <TextView 
			        android:layout_width="fill_parent"
	        		android:layout_height="wrap_content"
			        android:id="@+id/endDate"
			        android:visibility="visible"/>
			    <Button
			        android:id="@+id/showEndDate"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/showEndDateBtnText" 
			        android:onClick="showEndDateDialog"/>
		</LinearLayout>

	    <TimePicker
	        android:id="@+id/duration"
	        android:layout_width="wrap_content"
	        android:layout_height="79dp" />
	
<!-- 	    <DatePicker -->
<!-- 	        android:id="@+id/endDate" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:calendarViewShown="false" /> -->
	
<!-- 	    <Spinner -->
<!-- 	        android:id="@+id/duration" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content"  -->
<!--             android:layout_marginTop="-20dp" -->
<!--             android:layout_marginBottom="-20dp" -->
<!--             android:scaleX="0.8" -->
<!--             android:scaleY="0.8" -->
<!--             android:entries="@array/durationArray" /> -->

		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >

		    <Button 
		        android:id="@+id/createTask"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/create_task_label"
		        android:onClick="saveTaskDetails"
		        />
		    
		    <Button 
		        android:id="@+id/cancelTask"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/cancel_task_label"
		        android:onClick="cancelTask"
		        />
		    </LinearLayout>
	    </LinearLayout>  
</RelativeLayout>