<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vjburra.todoapp.MainActivity$PlaceholderFragment" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <EditText android:id="@+id/editMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/editMsg_toolTip"/>
    
<!--     <Spinner -->
<!--         android:id="@+id/month_spinner" -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:entries="@array/mnthArray" /> -->

    <Button android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveBtnTitle"
        android:onClick="saveInfo" />
    
<!--     <Button android:id="@+id/showTimeDlg" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="Show Time Dlg" -->
<!--         android:onClick="showTimePickerDialog" /> -->
    <LinearLayout 
        android:orientation="vertical"
        android:id="@+id/dbTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DigitalClock" />

</LinearLayout>
